# llm-wiki

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release-draft.yml  release.yml
.superpowers/sdd/: python-foundation-coverage-report.md
docs/superpowers/plans/: 2026-07-11-embedding-lifecycle.md  2026-07-11-file-projection-consistency.md  2026-07-11-v031-stabilization.md
docs/superpowers/specs/: 2026-07-11-embedding-lifecycle-design.md  2026-07-11-file-projection-consistency-design.md  2026-07-11-v031-stabilization-design.md
frontend/: build.mjs  package-lock.json  package.json  playwright.config.js  vitest.config.js
frontend/e2e/: critical-flows.pw.js  merge-resolver.pw.js  run-support.mjs  run.mjs  run.node-test.mjs  search-workbench.pw.js  server.py  test_server.py
frontend/src/: entry.jsx  hljs-entry.js  md-extensions.js  mermaid-entry.js
frontend/test/: activity-static.test.js  datetime-static.test.js  editor-static.test.js  entry.test.jsx  graph-static.test.js  hljs-entry.test.js  md-extensions.test.js  merge-static.test.js  mermaid-entry.test.js  outline-static.test.js  palette-static.test.js  preview-static.test.js  props-static.test.js  realtime-static.test.js  related-static.test.js  search-static.test.js  setup.js  share-static.test.js  shell-static.test.js  static-test-utils.js  tasks-static.test.js
scripts/: __init__.py  distribution_smoke.py  docker_smoke.py
src/llm_wiki/: __init__.py  _cli_impl.py  cli.py  config.py  db.py  embedding.py  embedding_contract.py  events.py  file_projection.py  graph.py  indexing.py  logconf.py  markdown_render.py  markdown_utils.py  mcp_server.py  merge.py  metrics.py  process_lock.py  ratelimit.py  runtime.py  search.py  snapshot.py  util.py
src/llm_wiki/services/: __init__.py  audit.py  auth.py  doc_crud.py  doc_edit.py  doc_import.py  doc_links.py  doc_nav.py  doc_projection.py  doc_reindex.py  doc_search.py  documents.py  errors.py  oidc.py  share.py  users.py
src/llm_wiki/web/: __init__.py  app.py  helpers.py  security.py
src/llm_wiki/web/routes/: __init__.py  api.py  auth_pages.py  deps.py  docs_pages.py  health.py  search_graph.py  settings_admin.py
src/llm_wiki/web/static/: activity.js  datetime.js  editor.js  graph.js  merge.js  outline.js  palette.js  preview.js  props.js  realtime.js  related.js  search.js  share.js  shell.js  style.css  tasks.js
src/llm_wiki/web/templates/: _badges.html  _icons.html  _tree.html  activity.html  admin.html  base.html  broken_links.html  diff.html  edit.html  error.html  graph.html  history.html  list.html  login.html  missing.html  revision.html  search.html  settings.html  share.html  tags.html  trash.html  view.html
tests/: conftest.py  test_account_audit_atomicity.py  test_activity_via.py  test_api_key_scope.py  test_auth_users_coverage.py  test_broken_links_actions.py  test_cli_audit.py  test_cli_coverage.py  test_config.py  test_config_resilience.py  test_core_branch_coverage.py  test_coverage_gaps_036.py  test_credentials.py  test_data_coverage.py  test_db_check.py  test_db_migrations.py  test_delete_recovery.py  test_distribution_gates.py  test_doc_activity.py  test_documents.py  test_documents_coverage.py  test_documents_recovery_coverage.py  test_documents_tail_coverage.py  test_embed_worker.py  test_embedder.py  test_embedding_binding.py  test_embedding_optional.py  test_events.py  test_file_projection.py  test_file_projection_coverage.py  test_folders_shell.py  test_foundation_coverage.py  test_graph.py  test_graph_filters.py  test_import.py  test_import_coverage.py  test_indexing.py  test_link_resolution.py  test_llms_txt.py  test_markdown_render.py  (+47 more)
