[project]
name = "llm-wiki"
version = "0.17.0"
description = "Obsidian-like markdown knowledge base with a web viewer and an HTTP MCP server for LLMs (hybrid BM25+vector search, link graph, optimistic-concurrency multi-user editing)."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "python-multipart>=0.0.18",
    "markdown-it-py>=3.0",
    "mdit-py-plugins>=0.4",
    "bleach>=6.1",
    "mcp>=1.2",
    "sentence-transformers>=3.0",
    "torch>=2.2",
    "sqlite-vec>=0.1.6",
    "argon2-cffi>=23.1",
    "pyjwt>=2.9",
    "itsdangerous>=2.2",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "prometheus-client>=0.20",
]

[project.scripts]
llm-wiki = "llm_wiki.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_wiki"]

# Route torch through the CPU-only wheel index. Without this, `uv` pulls the
# multi-GB CUDA build of torch on Linux. `explicit = true` means this index is
# used ONLY for packages explicitly assigned to it below (torch); everything
# else continues to come from PyPI.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
# E501 (line length) is noisy on long SQL/strings; the formatter handles wrapping.
ignore = ["E501"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency markers are designed to be used as argument defaults; this
# is the idiomatic pattern, not the B008 mutable-default bug.
extend-immutable-calls = ["fastapi.Depends", "fastapi.File", "fastapi.Form", "fastapi.Query"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
# Start non-strict: don't descend into unannotated function bodies. Ratchet up
# (check_untyped_defs, disallow_untyped_defs) as annotations are filled in.
check_untyped_defs = false
warn_unused_ignores = true

[tool.coverage.run]
source = ["llm_wiki"]
branch = true

[tool.coverage.report]
show_missing = true
