[project]
name = "llm-wiki"
version = "0.36.0"
description = "Obsidian-like markdown knowledge base with a web viewer and an HTTP MCP server for LLMs (hybrid BM25+vector search, link graph, optimistic-concurrency multi-user editing)."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "llm-wiki contributors" }]
keywords = ["knowledge-base", "markdown", "mcp", "obsidian", "rag"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
dependencies = [
    "fastapi>=0.139.2",
    "uvicorn[standard]>=0.51.0",
    "jinja2>=3.1",
    "python-multipart>=0.0.18",
    "markdown-it-py>=3.0",
    "mdit-py-plugins>=0.4",
    "bleach>=6.1",
    "mcp>=1.28.1",
    "sentence-transformers>=5.6.0",
    "torch>=2.13.0",
    "sqlite-vec>=0.1.6",
    "argon2-cffi>=23.1",
    "pyjwt>=2.9",
    "itsdangerous>=2.2",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "prometheus-client>=0.20",
    "regex>=2026.7.19",
    "filelock>=3.31.0",
]

[project.scripts]
llm-wiki = "llm_wiki.cli:main"

[dependency-groups]
dev = [
    "httpx2>=2.7.0",
    "pip-audit>=2.9",
    "pytest>=9.1.1",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.15.22",
    "mypy>=2.3.0",
]

[project.urls]
Homepage = "https://github.com/kht6163/llm-wiki"
Repository = "https://github.com/kht6163/llm-wiki"
Issues = "https://github.com/kht6163/llm-wiki/issues"
Security = "https://github.com/kht6163/llm-wiki/security/policy"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_wiki"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.cache",
    "/.mypy_cache",
    "/.pytest_cache",
    "/.ruff_cache",
    "/.superpowers",
    "/.venv",
    "/.wheel-smoke",
    "/.worktrees",
    "/build",
    "/data",
    "/dist",
    "/frontend/coverage",
    "/frontend/node_modules",
    "/htmlcov",
    "/models",
    "/secrets",
    "/vault",
    "/.coverage",
    "/.coverage.*",
    "/coverage.xml",
    "/.env",
    "/.env.*",
    "!/.env.example",
    "/**/__pycache__",
    "/**/*.db",
    "/**/*.db-*",
    "/**/*.dll",
    "/**/*.dylib",
    "/**/*.key",
    "/**/*.node",
    "/**/*.pem",
    "/**/*.pyc",
    "/**/*.pyo",
    "/**/*.so",
    "/**/*.sqlite",
    "/**/*.sqlite3",
]

# Route torch through the CPU-only wheel index. Without this, `uv` pulls the
# multi-GB CUDA build of torch on Linux. `explicit = true` means this index is
# used ONLY for packages explicitly assigned to it below (torch); everything
# else continues to come from PyPI.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]

# torch pulls an older setuptools that pip-audit flags (PYSEC-2026-3447 fixed in 83+).
[tool.uv]
override-dependencies = ["setuptools>=83.0.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["error"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
# E501 (line length) is noisy on long SQL/strings; the formatter handles wrapping.
ignore = ["E501"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency markers are designed to be used as argument defaults; this
# is the idiomatic pattern, not the B008 mutable-default bug.
extend-immutable-calls = ["fastapi.Depends", "fastapi.File", "fastapi.Form", "fastapi.Query"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
# Check function bodies even while annotations are being adopted incrementally.
check_untyped_defs = true
warn_unused_ignores = true

[tool.coverage.run]
source = ["llm_wiki"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 100
partial_branches = ["pragma: no branch"]
